Trying to fix a bug on Iphone Safari

--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,8 @@ a {
 }
 
 .header {
+  -webkit-transform: translate3d(0, 0, 0);
+  transform: translate3d(0, 0, 0);
   position: fixed;
   width: 100vw;
   height: 55px;
